--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "SatsangConnect",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/bhagavad-gita-thumbnail.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/bhagavad-gita-thumbnail.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -15,16 +15,23 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.srai22.satsangconnect"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/bhagavad-gita-thumbnail.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.srai22.satsangconnect"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/bhagavad-gita-thumbnail.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "fa9df089-2277-4642-96cf-4c0b54985389"
+      }
     }
   }
 }
