--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.8
+  intl: ^0.17.0
+  fl_chart: ^0.63.0
 
 
   # The following adds the Cupertino Icons font to your application.
