--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,32 +5,42 @@ on:
     branches: [ "flutter" ]
   pull_request:
     branches: [ "flutter" ]
+
 jobs:
   build:
+    # This job will run on ubuntu virtual machine
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up JDK
-      uses: actions/setup-java@v2
+    
+    # Setup Java environment in order to build the Android app.
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
       with:
-        distribution: 'adopt'
         java-version: '12.x'
-
-    - name: Install Flutter
-      uses: subosito/flutter-action@v1
+    
+    # Setup the flutter environment.
+    - uses: subosito/flutter-action@v1
       with:
-        flutter-version: '2.x.x'
-
-    - name: Flutter dependencies
-      run: flutter pub get
-
-    - name: Build APK
-      run: flutter build apk
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v2
+        channel: 'stable' # 'dev', 'alpha', default to: 'stable'
+        flutter-version: '1.12.x' # you can also specify exact version of flutter
+    
+    # Get flutter dependencies.
+    - run: flutter pub get
+    
+    # Check for any formatting issues in the code.
+    - run: flutter format --set-exit-if-changed .
+    
+    # Statically analyze the Dart code for any errors.
+    - run: flutter analyze .
+    
+    # Run widget tests for our flutter project.
+    - run: flutter test
+    
+    # Build apk.
+    - run: flutter build apk
+    
+    # Upload generated apk to the artifacts.
+    - uses: actions/upload-artifact@v1
       with:
         name: release-apk
-        path: build/app/outputs/flutter-apk/app-release.apk
+        path: build/app/outputs/apk/release/app-release.apk
